# DemandPilot

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md  MEMORY.md  RULES.md
.claude/PROMPTS/: audit.md  review.md  volume_01.md  volume_02.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
configs/: app.yaml  costs.yaml  features.yaml  forecast.yaml  logging.yaml  simulation.yaml
docker/: Dockerfile  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CODE_REVIEW_CHECKLIST.md  CODING_STANDARDS.md  DATA_MODEL.md  DATA_VERSIONING.md  DECISIONS.md  DEFINITION_OF_DONE.md  DEVELOPMENT_WORKFLOW.md  DOCKER_STRATEGY.md  ENVIRONMENT_SETUP.md  EXCEPTION_STRATEGY.md  EXPERIMENT_TRACKING.md  GIT_STRATEGY.md  KNOWN_LIMITATIONS.md  LOGGING_STRATEGY.md  MODEL_VERSIONING.md  PROJECT.md  RISK_REGISTER.md  ROADMAP.md  SYSTEM_FLOW.md  TECH_STACK.md  TESTING.md
docs/adr/: 001-duckdb.md  002-lightgbm.md  003-newsvendor.md  004-streamlit.md  005-jinja2.md  006-mlflow.md  007-polars.md  008-direct-quantile-forecasting.md  009-pydantic-config.md  010-config-generated-feature-sql.md  011-snapshot-data-versioning.md  012-cost-coupled-quantiles.md  013-m5-dataset.md  014-future-known-vs-history-derived-features.md  015-horizon-as-feature-training.md  016-retrospective-recommendations.md  017-policy-replay-simulation.md  018-executive-report-design.md  README.md
scripts/: download_m5.py
sql/: assemble_horizon_dataset.sql.j2  create_tables.sql  feature_snapshots.sql  feature_store.sql  ingest_m5.sql.j2  report_recommendations_summary.sql  report_recommendations_top_misses.sql  report_simulation_summary.sql  rolling_features.sql  rolling_features.sql.j2  views.sql
src/demandpilot/: __init__.py  cli.py  exceptions.py  logging_setup.py  mlflow_utils.py  sqlrender.py
src/demandpilot/config/: __init__.py  loader.py  models.py
src/demandpilot/core/: __init__.py  demand_distribution.py  metrics.py  newsvendor.py
src/demandpilot/data/: __init__.py  db.py  m5.py  schema.py  validation.py
src/demandpilot/features/: __init__.py  generator.py  naming.py  snapshots.py
src/demandpilot/forecasting/: __init__.py  dataset.py  model.py  pipeline.py  split.py
src/demandpilot/optimization/: __init__.py  recommender.py
src/demandpilot/reporting/: __init__.py  builder.py  data.py
src/demandpilot/reporting/templates/: executive_report.html.j2
src/demandpilot/simulation/: __init__.py  baseline.py  replay.py
tests/: conftest.py
tests/integration/: test_cli.py  test_features.py  test_forecasting.py  test_ingestion.py  test_mlflow_utils.py  test_optimization.py  test_reporting.py  test_simulation.py
tests/unit/: test_baseline.py  test_config.py  test_demand_distribution.py  test_feature_generator.py  test_logging_setup.py  test_metrics.py  test_mlflow_utils.py  test_naming.py  test_newsvendor.py  test_recommender.py  test_reporting_data.py  test_snapshots.py  test_split.py  test_sqlrender.py
